GLonD3D12: Crashes and suboptimal fallback
Tested
- Mesa 21.0.0-devel (git-2e7f35a8) x64 build with softpipe, llvmpipe and d3d12
- Mesa 21.0.0-devel (git-746a0f50) x86 build with softpipe and d3d12 (LLVM disabled)
I didn't build with microsoft-clc
and spirv-to-dxil
.
System information
- OS: Windows 10.0.19042.685
- GPU: Intel HD Graphics 3000 (driver: 9.17.10.4459, D3D level 10.1)
Results
-
I get crashes with any program I tried (PPSSPP, GPU Caps Viewer, Cemu, mpv media player) when forcing WARP using DirectX Properties (dxcpl) or LIBGL_ALWAYS_SOFTWARE
variable so OpenGL over D3D12 can run even if GPU D3D support is insufficient, like on my system -
OpenGL over D3D12 fallback to softpipe when couldn't run, even if better option llvmpipe was included